@@ -17,90 +17,68 @@ module MongoMapper
       attr_accessor :model_attributes, :model_indexes
 
       def initialize(*args, &block)
-        super         
-        # from helpers/model_helper        
+        super
+        # from helpers/model_helper
         # parse_model_attributes
 
-        @model_attributes = []        
+        @model_attributes = []
         @model_indexes = {}
-        
+
         @model_attributes = attributes
       end
 
       def create_model_file
-        template 'model.rb', "app/models/#{file_name}.rb"        
+        template 'model.rb', "app/models/#{file_name}.rb"
       end
 
-      protected 
+      protected
 
-      # include Rails3Generators::Helpers::Model
-      
-      def embedded_statement
-        "include MongoMapper::EmbeddedDocument"
-      end
-
-      def version_statement
-        'include Versioned # see http://github.com/nathancolgate/versioned for 0.8 compatible version'
-      end
-
-      def timestamps_statement
-        'timestamps!'
-      end
-
-      def statements
-        stm_list = []
-        stm_list << embedded_statement if embedded?
-        stm_list << version_statement if version?
-        stm_list << timestamps_statement if timestamps?
-        stm_list.join("\n")        
-      end
-
-
-      def version?
-        options[:version]
-      end        
-
-      def embedded?
-        options[:embedded]
-      end
-
-      def parent?
-        options[:parent]
-      end
-
-      def timestamps?
-        options[:timestamps]
-      end
-
-      def model_exists?
-        File.exist? destination_path("app/models/#{file_name}.rb")
-      end        
-
-      # def model_name
-      #   name
-      # end      
-      # 
-      # def singular_name
-      #   model_name.underscore
-      # end
-      # 
-      # def plural_name
-      #   model_name.underscore.pluralize
-      # end
-      # 
-      # def class_name
-      #   model_name.camelize
-      # end
-      # 
-      # def plural_class_name
-      #   plural_name.camelize
-      # end 
-      
-      def model_columns_for_attributes
-        class_name.constantize.columns.reject do |column|
-          column.name.to_s =~ /^(id|created_at|updated_at)$/
+        def embedded_statement
+          "include MongoMapper::EmbeddedDocument"
         end
-      end
+
+        def version_statement
+          'include Versioned # see http://github.com/nathancolgate/versioned for 0.8 compatible version'
+        end
+
+        def timestamps_statement
+          'timestamps!'
+        end
+
+        def statements
+          stm_list = []
+          stm_list << embedded_statement if embedded?
+          stm_list << version_statement if version?
+          stm_list << timestamps_statement if timestamps?
+          stm_list.join("\n")
+        end
+
+
+        def version?
+          options[:version]
+        end
+
+        def embedded?
+          options[:embedded]
+        end
+
+        def parent?
+          options[:parent]
+        end
+
+        def timestamps?
+          options[:timestamps]
+        end
+
+        def model_exists?
+          File.exist? destination_path("app/models/#{file_name}.rb")
+        end
+
+        def model_columns_for_attributes
+          class_name.constantize.columns.reject do |column|
+            column.name.to_s =~ /^(id|created_at|updated_at)$/
+          end
+        end
     end
   end
 end
