@@ -1,3 +1,0 @@
-class <%= class_name %> < MongoMapper::Observer
-  # add observer code here!
-end
